[project]
name = "fcpp"
authors = [
    { name="Leonov Arthur", email="depish.eskry@yandex.ru" }
}
description = "Fast C++ Code Generation"
readme = "README.md"
requires-python = ">=3.7"

[project.urls]
"Homepage" = "https://github.com/eSkry/fcpp"
"Bug Tracker" = "https://github.com/eSkry/fcpp/issues"
