[project]
name = "cppchips"
authors = [
    { name="Leonov Arthur", email="depish.eskry@yandex.ru" }
}
description = "Fast C++ Code Generation"
readme = "README.md"
requires-python = ">=3.7"

[project.urls]
"Homepage" = "https://github.com/eSkry/cppchips"
"Bug Tracker" = "https://github.com/eSkry/cppchips/issues"
